# Path-Tracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
output/: example-scene
scenes/: cornell-box.yaml  example.yaml  light.yaml  mirrors.yaml  moon.yaml  pillars.yaml  quads.yaml  simple.yaml  skybox.yaml  test.yaml
src/: camera.hpp  hittable.h  hittable.hpp  image-filters.hpp  image.hpp  main.cpp  material.hpp  ray.h  ray.hpp  scene-parser.hpp  scene.hpp  texture.hpp  timer.hpp  utils.hpp
